--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,10 +1,11 @@
 body{
     margin:15px;
+    font-family:'Open sans', sans-serif;
 }
 
 form textarea#trimText{
     border-radius: 25px;
-    width:40%;
+    width:98%;
     min-height:1rem;
     height:300px;
     outline-width:0;
@@ -22,7 +23,7 @@ form button.nameButton{
     color:white;
     top:340px;
     cursor: pointer;
-    left:230px;
+    left:94%;
     outline-width: 0;
     background-color:rgb(30, 129, 243);
 }
@@ -32,4 +33,20 @@ form button.nameButton:hover{
 }
 form button.nameButton:active{
     background-color:rgb(26, 96, 177);
+}
+ul{
+    display:flex;
+    flex-wrap: wrap;
+}
+.spam{
+    font-size:12px;
+    background-color:rgb(194, 77, 77);
+    border-radius:25px;
+    width:fit-content;
+    max-width:40%;
+    padding:10px;
+    list-style-type: none;
+    overflow-wrap:break-word;
+    margin-bottom:10px;
+    color:white;
 }
