--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,8 +1,9 @@
 body{
-    margin:15px;
     font-family:'Open sans', sans-serif;
 }
-
+p{
+    text-align: center;
+}
 form textarea#trimText{
     border-radius: 25px;
     width:98%;
@@ -38,15 +39,18 @@ ul{
     display:flex;
     flex-wrap: wrap;
 }
+ul ul{
+    display:none;
+}
 .spam{
     font-size:12px;
     background-color:rgb(194, 77, 77);
     border-radius:25px;
     width:fit-content;
-    max-width:40%;
+    max-width:30%;
     padding:10px;
     list-style-type: none;
     overflow-wrap:break-word;
-    margin-bottom:10px;
+    margin:5px;
     color:white;
 }
