--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,7 +4,15 @@ body{
 p{
     text-align: center;
 }
-
+form input{
+    outline-width: 0;
+    margin-left:5px;
+    border:none;
+    background-color:rgb(45, 233, 123);
+    border-radius:10px;
+    font-size:1rem;
+    padding:3px;
+}
 form textarea#trimText{
     border-radius: 25px;
     width:98%;
@@ -23,7 +31,7 @@ form button.nameButton{
     border-radius:10px;
     position:absolute;
     color:white;
-    top:340px;
+    top:335px;
     cursor: pointer;
     right:20px;
     outline-width: 0;
@@ -31,7 +39,7 @@ form button.nameButton{
 }
 form button.nameButton:hover{
   transition:transform 100ms ease-in-out;
-  transform:scale(1.25,1.25)
+  transform:scale(1.2,1.2)
 }
 form button.nameButton:active{
     background-color:rgb(26, 96, 177);
