--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,22 +1,33 @@
+
 body{
     font-family:'Open sans', sans-serif;
+    margin:0;
 }
 p{
     text-align: center;
 }
-form input{
-    outline-width: 0;
-    margin-left:5px;
-    border:none;
-    background-color:rgb(45, 233, 123);
-    border-radius:10px;
-    font-size:1rem;
-    padding:3px;
+#heading{
+    text-align:center;
+    margin-bottom:5px;
+    height:50px;
+    color:white;
+    background-color:rgb(19, 133, 153);
 }
-form textarea#trimText{
+h1{
+    margin:0;
+}
+form{
+    margin:5px;
+}
+form .textArr{
+    width:97%;
+     margin:auto;
+}
+form .textArr textarea#trimText{
     border-radius: 25px;
-    width:98%;
     min-height:1rem;
+    width:97%;
+    margin:auto;
     height:300px;
     outline-width:0;
     padding:10px;
@@ -25,9 +36,19 @@ form textarea#trimText{
     color:white;
     background-color:rgb(25, 156, 134);
 }
-form textarea#trimText::placeholder{
+form .textArr textarea#trimText::placeholder{
     color:white;
     opacity:0.8;
+}
+form .buttonRow input{
+    outline-width: 0;
+    margin:auto;
+    border:none;
+    background-color:rgb(45, 233, 123);
+    border-radius:10px;
+    font-size:1rem;
+    padding:2px;
+
 }
 form button{
     height:23px;
@@ -39,10 +60,10 @@ form button{
     padding:3px;
 }
 form button.nameButton{
-    position:absolute;
+    position:relative;
     color:white;
-    top:335px;
-    right:20px;
+    float:right;
+    margin-right:25px;
     background-color:rgb(30, 129, 243);
 }
 form button:hover{
@@ -90,9 +111,7 @@ ul ul{
     top:30px;
 }
 @media only screen and (max-width:970px){
-    #trimText{
-        max-width:97%;
-    }
+    
     #spamCont{
         padding:0;
     }
